fixed python lambda generator relative path issue worked on 'stocks' api handler

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": [
       "es2018"
     ],
+    "types": ["node"],
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
