--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^10.17.60",
     "@types/prettier": "2.6.0",
-    "aws-cdk": "2.47.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.9.1",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-cognito": "^1.181.0",
     "aws-cdk-lib": "2.47.0",
     "constructs": "10.0.0",
     "source-map-support": "0.5.21"
