--- a/src/react/package.json
+++ b/src/react/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/body-parser": "^1.19.2",
     "@types/node": "^16.18.3",
+    "bootstrap": "^5.1.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
@@ -41,6 +44,7 @@
   "devDependencies": {
     "@types/jest": "^29.2.3",
     "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9"
+    "@types/react-dom": "^18.0.9",
+    "tailwindcss": "^3.2.4"
   }
 }
