forgot to save Dockerfile, needs pathing updates still

--- a/src/docker/react/Dockerfile
+++ b/src/docker/react/Dockerfile
@@ -1,10 +1,11 @@
 # stage1 - build react app first 
+# TODO Need to fix the paths
 FROM node:12.16.1-alpine3.9 as build
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
-COPY ./package.json /app/
+COPY ../../src/react/package.json /app/
 RUN yarn --silent
-COPY . /app
+COPY ../../ /app
 RUN yarn build
 
 # stage 2 - build the final image and copy the react build files
