--- a/src/docker/forecast-training-job/Dockerfile
+++ b/src/docker/forecast-training-job/Dockerfile
@@ -4,9 +4,9 @@ FROM python:3.9.15
 
 WORKDIR /app
 
-COPY ../../../../src/forecast-training-job/requirements.txt requirements.txt
+COPY src/requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
-COPY ../../../../src/forecast-training-job/* .
+COPY src/* .
 
 CMD [ "python3", "index.py"]
